--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.13.1
   firebase_analytics: ^9.1.2
-  firebase_analytics_web: ^0.4.0+8
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
